Fix: Home section height is set correctly on mobile devices

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -6,7 +6,7 @@
     position: relative;
     background: url('../../images/home.png') center/cover no-repeat;
     width: 100%;
-    height: 93vh;
+    height: 89vh;
 
     &::after{
         content: '';
